--- a/style.css
+++ b/style.css
@@ -2,416 +2,388 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Rubik', sans-serif;
 }
 
-body {
-  background-color: hsl(240, 78%, 98%);
-  background-image: url("images/bg-top.svg");
-  background-position: top right;
-  background-size: 40% 25%;
-  background-repeat: no-repeat;
-}
-
-main {
-  max-width: 90%;
-  margin: 0 auto;
-}
-
-.header-section {
-  padding-top: 15%;
-  margin: 0 auto;
-  width: 60%;
+header {
   padding-bottom: 15%;
 }
 
-.pricing-cont {
+nav {
   width: 100%;
-  margin: 0 auto;
 }
 
-h1 {
-  color: hsl(233, 13%, 49%);
-  font-weight: 700;
-  text-align: center;
-  padding-bottom: 10%;
-}
-
-.toggle-section {
+.header-flex {
   display: flex;
   width: 100%;
   margin: 0 auto;
 }
 
-.container {
-  margin: 0 auto;
-  padding: 0 5%;
+.logo-img {
+  margin: 25% 20%;
 }
 
-.toggle-btn {
-  width: 60px;
-  background: linear-gradient(120deg, hsl(236, 72%, 79%) 0%, hsl(237, 63%, 64%) 100%);
-  border-radius: 30px;
-  padding: 4%;
-  cursor: pointer;
-  transition: 0.2s all ease-in-out;
-}
-
-.toggle-btn:hover {
-  opacity: 0.7;
-}
-
-.toggle-btn .inner-circle {
-  width: 25px;
-  height: 25px;
-  background: #fff;
-  border-radius: 50%;
-  transition: 0.1s all ease-in-out;
-  margin-left: 55%;
-}
-
-.toggle-btn.active .inner-circle {
-  margin-left: -0.1%;
-}
-
-.toggle-section p {
-  color: hsl(234, 14%, 74%);
-  font-size: 0.9rem;
-  margin-top: 3%;
-  font-weight: 700;
-}
-
-.basic-section {
-  padding-top: 5%;
-  width: 90%;
-  margin: 0 auto;
-  background-color: hsl(0, 0%, 100%);
-  border-radius: 0.5rem;
-  box-shadow: 0 20px 32px rgba(0,0,0,0.11);
-}
-
-.header-p-basic, .header-p-master {
-  text-align: center;
-  color: hsl(233, 13%, 49%);
-  font-weight: 700;
-  padding-top: 5%;
-  font-size: 1rem;
-  padding-bottom: 8%;
-}
-
-#monthly-basic, #yearly-basic {
-  display: block;
-  text-align: center;
-  font-size: 4rem;
-  color: hsl(232, 13%, 33%);
-  padding-bottom: 6%;
-}
-
-#monthly-basic span, #yearly-basic span {
-  font-size: 2.5rem;
-}
-
-.basic-section .storage-p, .basic-section .users-p, .basic-section .datacap-p, .master-section .storage-p, .master-section .users-p, .master-section .datacap-p {
-  color: hsl(233, 13%, 49%);
-  font-weight: 700;
-  font-size: 0.9rem;
-  text-align: center;
-  padding: 5% 0;
-  width: 90%;
-  margin: 0 auto;
-  border-top: 0.01rem solid hsla(234, 14%, 74%, 0.5);
-  border-bottom: 0.01rem solid hsla(234, 14%, 74%, 0.5);
-}
-
-.purple-btn {
-  text-align: center;
-  padding: 10% 0;
-}
-
-.purple-btn button {
-  padding: 4% 0;
-  text-transform: uppercase;
-  width: 90%;
-  cursor: pointer;
-  background: linear-gradient(120deg, hsl(236, 72%, 79%) 0%, hsl(237, 63%, 64%) 100%);
-  border: 1px solid hsl(237, 63%, 64%);
-  color: hsl(0, 0%, 100%);
-  border-radius: 0.5rem;
-  font-weight: 700;
-  letter-spacing: 0.1rem;
-  font-size: 0.7rem;
-  transition: 0.3s all ease-in-out;
-}
-
-.purple-btn button:hover {
-  background: hsl(0, 0%, 100%);
-  color: hsl(237, 63%, 64%);
-  border: 1px solid hsl(234, 14%, 74%);
-}
-
-.professional-section {
-  width: 90%;
-  margin: 10% auto 0 auto;
-  background: linear-gradient(180deg, hsl(236, 72%, 79%) 0%, hsl(237, 63%, 64%) 100%);
-  padding-top: 5%;
-  border-radius: 0.5rem;
-  box-shadow: 0 20px 32px rgba(0,0,0,0.11);
-}
-
-.header-p-pro {
-  text-align: center;
-  color: hsl(0, 0%, 100%);
-  font-weight: 700;
-  padding-top: 5%;
-  padding-bottom: 8%;
-}
-
-#monthly-pro, #yearly-pro {
-  display: block;
-  text-align: center;
-  font-size: 4rem;
-  color: hsl(0, 0%, 100%);
-  padding-bottom: 6%;
-}
-
-#monthly-pro span, #yearly-pro span {
-  font-size: 2.5rem;
-}
-
-.professional-section .storage-p, .professional-section .users-p, .professional-section .datacap-p {
-  text-align: center;
-  color: hsl(0, 0%, 100%);
-  font-weight: 700;
-  font-size: 0.9rem;
-  padding: 5% 0;
-  width: 90%;
-  margin: 0 auto;
-  border-top: 0.01rem solid hsla(0, 0%, 100%, 0.5);
-  border-bottom: 0.01rem solid hsla(0, 0%, 100%, 0.5);
-}
-
-.white-btn {
-  text-align: center;
-  padding: 10% 0;
-}
-
-.white-btn button {
-  padding: 4% 0;
-  text-transform: uppercase;
-  width: 90%;
-  cursor: pointer;
-  background: hsl(0, 0%, 100%);
-  border-width: 0;
-  color: hsl(237, 63%, 64%);
-  border-radius: 0.5rem;
-  font-weight: 700;
-  letter-spacing: 0.1rem;
-  font-size: 0.7rem;
-  transition: 0.3s all ease-in-out;
-}
-
-.white-btn button:hover {
+.toggle-on {
   background: transparent;
-  color: hsl(0, 0%, 100%);
-  border: 1px solid hsl(0, 0%, 100%);
+  border-width: 0;
 }
 
-.master-section {
-  padding-top: 5%;
-  width: 90%;
-  margin: 10% auto 5% auto;
-  background-color: hsl(0, 0%, 100%);
-  border-radius: 0.5rem;
-  box-shadow: 0 20px 32px rgba(0,0,0,0.11);
+.toggle-off {
+  background: transparent;
+  border-width: 0;
 }
 
-#monthly-master, #yearly-master {
-  display: block;
+.open-icon, .close-icon {
+  cursor: pointer;
+}
+
+.menu-container {
+  visibility: hidden;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  background-color: hsla(229, 40%, 18%, 0.9);
+  z-index: 4;
+}
+
+.toggle-on-cont {
+  position: absolute;
+  right: 8%;
+  top: 10%;
+}
+
+.toggle-off-cont {
+  z-index: 100;
+  position: absolute;
+  right: 8%;
+  top: 10%;
+  visibility: hidden;
+}
+
+.logo-img-menu {
+  margin: 10% 8%;
+}
+
+.header-links {
   text-align: center;
-  font-size: 4rem;
-  color: hsl(232, 13%, 33%);
-  padding-bottom: 6%;
 }
 
-#monthly-master span, #yearly-master span {
-  font-size: 2.5rem;
+.header-links li{
+  padding: 6% 0;
+  border-top: 1px solid hsla(229, 8%, 60%, 0.5);
+  width: 85%;
+  margin: 0 auto;
+  list-style: none;
 }
 
-@media only screen and (max-width: 375px) {
-  .header-section {
-    width: 100%;
-  }
-
-  #monthly-basic, #monthly-pro, #monthly-master {
-    font-size: 3rem;
-  }
-
-  #monthly-basic span, #monthly-pro span, #monthly-master span {
-    font-size: 1.5rem;
-    padding: 0 1%;
-  }
-
-  #yearly-basic, #yearly-pro, #yearly-master {
-    font-size: 3rem;
-  }
-
-  #yearly-basic span, #yearly-pro span, #yearly-master span {
-    font-size: 1.5rem;
-    padding: 0 1%;
-  }
+.header-links a {
+  text-transform: uppercase;
+  color: hsla(0, 0%, 100%, 0.9);
+  letter-spacing: 0.1rem;
+  text-decoration: none;
+  font-size: 1.2rem;
 }
 
-@media only screen and (min-width: 450px) {
-  .pricing-cont {
-    width: 80%;
-  }
+.login-link {
+  border: 3px solid hsl(0, 0%, 100%);
+  padding: 2% 40%;
+  border-radius: 0.5rem;
 }
 
-@media only screen and (min-width: 550px) {
-  .pricing-cont {
-    width: 70%;
-  }
+.header-socials {
+  text-align: center;
+  padding: 40% 0 10% 0;
 }
 
-@media only screen and (min-width: 650px) {
-  .pricing-cont {
-    width: 60%;
-  }
+.header-socials li {
+  display: inline;
+  padding: 0 4%;
 }
 
-@media only screen and (min-width: 768px) {
-  body {
-    background-size: 30% 80%, 30% 30%;
-    background-color: hsl(240, 78%, 98%);
-    background-image: url("images/bg-top.svg"), url("images/bg-bottom.svg");
-    background-position: top right, bottom left;
-    background-repeat: no-repeat, no-repeat;
-  }
-
-  main {
-    max-width: 90%;
-  }
-
-  .header-section {
-    padding: 8% 0;
-  }
-
-  .pricing-cont {
-    width: 50%;
-  }
-
-  .sections-cont {
-    display: flex;
-    padding-bottom: 5%;
-  }
-
-  .basic-section {
-    width: 80%;
-    border-radius: 0.5rem 0rem 0rem 0.5rem;
-    padding: 0;
-    margin-bottom: 3%;
-    margin-top: 3%;
-  }
-
-  .professional-section {
-    margin: 0;
-    width: 80%;
-  }
-
-  .master-section {
-    padding: 0;
-    margin-bottom: 3%;
-    margin-top: 3%;
-    width: 80%;
-    border-radius: 0rem 0.5rem 0.5rem 0rem;
-  }
-
-  #monthly-basic, #monthly-pro, #monthly-master {
-    font-size: 3rem;
-  }
-
-  #monthly-basic span, #monthly-pro span, #monthly-master span {
-    font-size: 1.5rem;
-    padding: 0 1%;
-  }
-
-  #yearly-basic, #yearly-pro, #yearly-master {
-    font-size: 3rem;
-  }
-
-  #yearly-basic span, #yearly-pro span, #yearly-master span {
-    font-size: 1.5rem;
-    padding: 0 1%;
-  }
-}
-
-@media only screen and (min-width: 1024px) {
-
-  main {
-    max-width: 80%;
-  }
-
-  .pricing-cont {
-    width: 40%;
-  }
-
-  #monthly-basic, #monthly-pro, #monthly-master {
-    font-size: 4rem;
-  }
-
-  #monthly-basic span, #monthly-pro span, #monthly-master span {
-    font-size: 2rem;
-    padding: 0 1%;
-  }
-
-  #yearly-basic, #yearly-pro, #yearly-master {
-    font-size: 4rem;
-  }
-
-  #yearly-basic span, #yearly-pro span, #yearly-master span {
-    font-size: 2rem;
-    padding: 0 1%;
-  }
-}
-
-@media only screen and (min-width: 1440px) {
-
-  main {
-    max-width: 70%;
-  }
-
-  #monthly-basic, #monthly-pro, #monthly-master {
-    font-size: 4.5rem;
-  }
-
-  #monthly-basic span, #monthly-pro span, #monthly-master span {
-    font-size: 2.25rem;
-    padding: 0 1%;
-  }
-
-  #yearly-basic, #yearly-pro, #yearly-master {
-    font-size: 4.5rem;
-  }
-
-  #yearly-basic span, #yearly-pro span, #yearly-master span {
-    font-size: 2.25rem;
-    padding: 0 1%;
-  }
-}
-
-.attribution { 
-  font-size: 11px; text-align: center;
-  font-weight: 700; 
-  color: hsl(232, 13%, 33%);
-  padding-top: 5%;
-  padding-bottom: 2%;
-}
-
-.attribution a { 
-  color: hsl(237, 63%, 64%); 
+.header-socials a {
   text-decoration: none;
 }
 
-.attribution a:hover {
-  text-decoration: underline;
+.press {
+  visibility: visible;
+}
+
+.press2 {
+  visibility: visible;
+}
+
+.press3 {
+  visibility: hidden;
+}
+
+.intro-img-cont {
+  width: 90%;
+  margin: 5% auto 0 auto;
+  z-index: 1;
+  position: relative;
+}
+
+.intro-img-cont:before {
+  content: "";
+  position: absolute;
+  background-color: hsl(231, 69%, 60%);
+  border-radius: 70% 0 0 70% / 100%;
+  width: 90%;
+  right: -5%;
+  bottom: 0;
+  height: 80%;
+  z-index: -1;
+}
+
+.intro-img {
+  width: 100%;
+  display: block;
+}
+
+.header-text {
+  padding-top: 10%;
+}
+
+h1 {
+  width: 85%;
+  text-align: center;
+  margin: 0 auto;
+  font-size: 1.9rem;
+  font-weight: 500;
+  padding-bottom: 5%;
+  color: hsl(229, 31%, 21%);
+}
+
+.header-p {
+  color: hsl(229, 8%, 60%);
+  width: 85%;
+  text-align: center;
+  margin: 0 auto;
+  line-height: 1.5rem;
+  padding-bottom: 5%;
+}
+
+.header-btn-cont {
+  text-align: center;
+  width: 100%;
+  padding-bottom: 10%;
+}
+
+.chrome-btn {
+  background-color: hsl(231, 69%, 60%);
+  color: hsl(0, 0%, 98%);
+  padding: 4% 5%;
+  margin: 0 1%;
+  border-radius: 0.4rem;
+  border-width: 0;
+  font-weight: 500;
+  box-shadow: 0px 5px 10px hsl(229, 8%, 80%);
+  cursor: pointer;
+}
+
+.firefox-btn {
+  background-color: hsl(0, 0%, 95%);
+  color: hsl(229, 31%, 21%);
+  padding: 4% 5%;
+  margin: 0 1%;
+  border-radius: 0.4rem;
+  border-width: 0;
+  font-weight: 500;
+  box-shadow: 0px 5px 10px hsl(229, 8%, 80%);
+  cursor: pointer;
+}
+
+.more-info-btn {
+  display: none;
+}
+
+.features-section {
+  padding-bottom: 25%;
+}
+
+.features-h2 {
+  text-align: center;
+  font-weight: 500;
+  padding-bottom: 5%;
+  color: hsl(229, 31%, 21%);
+}
+
+.features-p {
+  width: 90%;
+  text-align: center;
+  margin: 0 auto;
+  color: hsl(229, 8%, 60%);
+  padding-bottom: 10%;
+}
+
+#feature-btn-cont {
+  text-align: center;
+}
+
+#simple-btn, #speedy-btn, #easy-btn {
+  text-align: center;
+  color: hsl(229, 8%, 50%);
+  padding: 5% 0;
+  width: 85%;
+  margin: 0 auto;
+  cursor: pointer;
+  position: relative;
+  border-width: 0;
+  border-top: 1px solid hsl(229, 8%, 90%);
+  background: transparent;
+}
+
+#simple-btn:before {
+  border-bottom: 4px solid hsl(0, 94%, 66%);
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 30%;
+  width: 40%;
+  visibility: visible;
+}
+
+#speedy-btn:before, #easy-btn:before {
+  border-bottom: 3px solid hsl(0, 94%, 66%);
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 30%;
+  width: 40%;
+  visibility: hidden;
+}
+
+#easy-btn {
+  border-bottom: 1px solid hsl(229, 8%, 90%);
+}
+
+#bookmark-div {
+  display: block;
+}
+
+.select-1 {
+  display: none;
+}
+
+#intelligent-div {
+  display: none;
+}
+
+#share-div {
+  display: none;
+}
+
+.tab-1-img, .tab-2-img, .tab-3-img {
+  width: 90%;
+  display: block;
+  margin: 0 auto;
+}
+
+#tab-1-img-cont, .tab-2-img-cont, .tab-3-img-cont {
+  z-index: 1;
+  position: relative;
+  width: 90%;
+  margin: 10% auto;
+}
+
+#tab-1-img-cont:before, .tab-2-img-cont:before, .tab-3-img-cont:before {
+  content: "";
+  position: absolute;
+  background-color: hsl(231, 69%, 60%);
+  border-radius: 0 70% 70% 0% / 100%;
+  width: 90%;
+  left: -5%;
+  bottom: -10%;
+  height: 80%;
+  z-index: -1;
+}
+
+#tab-1-img-cont:before {
+  bottom: -18%;
+}
+
+.bookmark-h2 {
+  padding-top: 5%;
+}
+
+.bookmark-h2, .intelligent-h2, .share-h2 {
+  text-align: center;
+  color: hsl(229, 31%, 21%);
+  width: 70%;
+  margin: 0 auto;
+  font-weight: 500;
+  padding-bottom: 5%;
+}
+
+.bookmark-p, .intelligent-p, .share-p {
+  text-align: center;
+  color: hsl(229, 8%, 60%);
+  width: 85%;
+  margin: 0 auto;
+}
+
+.extension-section {
+  width: 100%;
+}
+
+.extension-logos {
+  display: block;
+  margin: 10% auto 0 auto;
+}
+
+.google-div, .firefox-div, .opera-div {
+  width: 75%;
+  margin: 10% auto;
+  background-color: hsl(0, 0%, 100%);
+  box-shadow: 0px 0px 10px hsl(229, 8%, 90%);
+  border-radius: 1rem;
+  padding: 6% 0;
+}
+
+.add-para {
+  text-align: center;
+  font-weight: 500;
+  font-size: 1.2rem;
+  padding-top: 10%;
+}
+
+.version-para {
+  color: hsl(229, 8%, 60%);
+  text-align: center;
+  padding: 3% 0;
+  font-weight: 400;
+  font-size: 0.9rem;
+}
+
+.dots-img {
+  width: 100%;
+  display: block;
+  margin: 5% 0;
+}
+
+.install-btn-cont {
+  text-align: center;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.install-btn-cont button {
+  background-color: hsl(231, 69%, 60%);
+  color: hsl(0, 0%, 90%);
+  padding: 4% 15%;
+  margin: 0 1%;
+  border-radius: 0.4rem;
+  border-width: 0;
+  font-weight: 500;
+  box-shadow: 0px 5px 10px hsl(229, 8%, 80%);
+  cursor: pointer;
+  font-size: 0.9rem;
+}
+
+.attribution { 
+  font-size: 11px; text-align: center; 
+}
+
+.attribution a { 
+  color: hsl(228, 45%, 44%); 
 }
