--- a/style.css
+++ b/style.css
@@ -231,26 +231,31 @@ h1 {
   border-width: 0;
   border-top: 1px solid hsl(229, 8%, 90%);
   background: transparent;
+  font-size: 1rem;
+  transition: 0.4s all ease-in-out;
 }
 
-#simple-btn:before {
+#simple-btn {
+  color: hsl(0, 0%, 0%);
+}
+
+#border-cont1 {
   border-bottom: 4px solid hsl(0, 94%, 66%);
-  content: "";
-  position: absolute;
-  bottom: 0;
-  right: 30%;
-  width: 40%;
+  width: 35vw;
+  margin: 0 auto;
   visibility: visible;
 }
 
-#speedy-btn:before, #easy-btn:before {
-  border-bottom: 3px solid hsl(0, 94%, 66%);
-  content: "";
-  position: absolute;
-  bottom: 0;
-  right: 30%;
-  width: 40%;
+#border-cont2, #border-cont3 {
+  border-bottom: 4px solid hsl(0, 94%, 66%);
+  width: 35vw;
+  margin: 0 auto;
   visibility: hidden;
+}
+
+#border-cont3 {
+  margin-top: -1.3%;
+  border-bottom: 5px solid hsl(0, 94%, 66%);
 }
 
 #easy-btn {
