--- a/style.css
+++ b/style.css
@@ -256,7 +256,7 @@ h1 {
 }
 
 #border-cont3 {
-  margin-top: -1.3%;
+  margin: -1.3% auto 0 auto;
   border-bottom: 5px solid hsl(0, 94%, 66%);
 }
 
@@ -776,11 +776,35 @@ footer {
     width: 70%;
     margin: 0 auto;
     display: flex;
+    border-bottom: 1px solid hsl(229, 8%, 90%);
+  }
+
+  #border-cont1, #border-cont2, #border-cont3 {
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  #border-cont3 {
+    margin-top: 4%;
+    margin: 0 auto;
   }
 
   #simple-btn, #speedy-btn, #easy-btn {
     border-top: 0;
     border-bottom: 0;
+    width: 100%;
+  }
+
+  .speedy-btn-cont {
+    margin: 0 auto;
+  }
+
+   .easy-btn-cont {
+    
+  }
+
+  .speedy-btn-cont {
+    margin: 0 auto;
   }
 }
 
